WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210112
[GStreamer] Log a warning if playbin is not found
https://bugs.webkit.org/show_bug.cgi?id=210112
Summary
[GStreamer] Log a warning if playbin is not found
Alicia Boya García
Reported
2020-04-07 07:47:36 PDT
I spent quite a bit of time looking in the debugger for what ended up being a trivial configuration issue because there was no logging showing any obvious problem. Let's add it.
Attachments
Patch
(1.73 KB, patch)
2020-04-07 07:52 PDT
,
Alicia Boya García
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alicia Boya García
Comment 1
2020-04-07 07:52:52 PDT
Created
attachment 395681
[details]
Patch
EWS
Comment 2
2020-04-07 09:38:38 PDT
Committed
r259643
: <
https://trac.webkit.org/changeset/259643
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395681
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug