[GStreamer] Log a warning if playbin is not found https://bugs.webkit.org/show_bug.cgi?id=210112

Reviewed by Philippe Normand.

I spent quite a bit of time looking in the debugger for what ended up
being a trivial configuration issue because there was no logging
showing any obvious problem. Let's add it.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::isAvailable):


Canonical link: https://commits.webkit.org/223021@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259643 268f45cc-cd09-0410-ab3c-d52691b4dbfc